Correct media query kick-in on small screens

--- a/src/index.css
+++ b/src/index.css
@@ -196,7 +196,7 @@ h1 {
 }
 
 /* media query - kicks in below 420 pixels */
-@media (max-width: 420px) {
+@media (max-width: 430px) {
   .uppercontainer > article {
     width: 10em;
   }
